--- a/backend2/requirements.txt
+++ b/backend2/requirements.txt
@@ -4,6 +4,10 @@ numpy==1.24.3
 matplotlib==3.7.2
 seaborn==0.13.0
 pandas==2.1.0
+opencv-python==4.7.0.72
+torch==2.1.1
+torchvision==0.16.1
+ultralytics==8.0.192
 fastapi
 uvicorn
 pillow
